# coded_merkle_tree

./: .gitignore  Cargo.toml  README.md
chain/: Cargo.toml  README.md
chain/src/: block.rs  block_header.rs  code16.txt  coded_merkle_roots.rs  constants.rs  decoder.rs  indexed_block.rs  lib.rs  light_client.rs  main.rs  transaction.rs
chain/src/LDPC_codes/: generate_random_LDPC.cpp  k=16384_decode.txt  k=4_decode.txt  k=4_encode.txt  k=512_encode.txt  k=64_decode.txt  main.cpp  rawcode16.txt  rawcode16384.txt  rawcode2048.txt  rawcode256.txt  rawcode32.txt  rawcode8.txt  rawcode8192.txt  symbols_and_parities_k=2048.pickle  symbols_and_parities_k=64.pickle  systematic_code_generation.py
chain/src/codes/: generate_random_LDPC.h  k=1024_decode.txt  k=128_decode.txt  k=128_encode.txt  k=16_decode.txt  k=16_encode.txt  k=2048_decode.txt  k=256_decode.txt  k=256_encode.txt  k=4096_decode.txt  k=512_decode.txt  k=64_encode.txt  k=8192_decode.txt  rawcode1024.txt  rawcode128.txt  rawcode4.txt  rawcode4096.txt  rawcode512.txt  rawcode64.txt  symbols_and_parities_k=1024.pickle  symbols_and_parities_k=128.pickle  symbols_and_parities_k=16.pickle  symbols_and_parities_k=256.pickle  symbols_and_parities_k=4.pickle  symbols_and_parities_k=512.pickle  systematic_code_generation.py
serialization/src/: impls.rs
