[package]
name = "cmt"
version = "0.1.0"
license = ""
authors = []
description = "Coded Merkle tree implementation for Parity Bitcoin client."

[dependencies]
rand = "0.7"
rustc-hex = "2"
heapsize = "0.4"
rayon = "1.0"
log = "0.4"
env_logger = "0.5"
libc = "0.2"
clap = { version = "2", features = ["yaml"] }

chain = { path = "chain" }
bitcrypto = { path = "crypto" }
serialization = { path = "serialization" }
serialization_derive = { path = "serialization_derive" }
primitives = { path = "primitives" }

#app_dirs = { git = "https://github.com/paritytech/app-dirs-rs" }
#keys = { path = "keys" }
#network = { path = "network" }
#miner = { path = "miner" }
#p2p = { path = "p2p" }
#script = { path = "script" }
#storage = { path = "storage" }
#db = { path = "db" }
#verification = { path = "verification" }
#sync = { path = "sync" }
#import = { path = "import" }
#logs = { path = "logs" }
#rpc = { path = "rpc" }

#[profile.dev]
#debug = true
#panic = 'abort'

#[profile.release]
#debug = true
#panic = 'abort'

#[profile.test]
#debug = true

[[bin]]
path = "chain/src/main.rs"
name = "chain"

#[workspace]
#members = ["bencher"]
